py/src/rabbit/manifests/stateful.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: rabbitmq
spec:
  selector:
    matchLabels:
      app: rabbitmq
  serviceName: "not-applicable"
  replicas: 2
  template:
    metadata:
      labels:
        app: rabbitmq
    spec:
      containers:
      - name: rabbitmq
        image: rabbitmq:3-management
        ports:
        - containerPort: 15672
          protocol: TCP
          name: http
        - name: amqp
          containerPort: 5672
          protocol: TCP
        volumeMounts:
        - name: rabbbit-volume
          mountPath: /var/lib/rabbitmq 
      volumes:
        - name:  rabbbit-volume
          persistentVolumeClaim:
            claimName: rabbitmq-pvc
