py/src/rabbit/manifests/service.yaml
  kind: Service
  apiVersion: v1
  metadata:
    name:  rabbitmq
  spec:
    selector:
      app:  rabbitmq
    type:  ClusterIP
    ports:
    - name:  http
      port:  15672
      targetPort:  15672
      protocol: TCP
    - name: amqp
      port: 5672
      targetPort: 5672
      protocol: TCP
